Set max-width: 100% to avoid horizontal scroll

--- a/src/css/map.css
+++ b/src/css/map.css
@@ -14,11 +14,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 100%;
 }
 
 .trace-map {
   width: clamp(100px, 100vw, 1024px);
   height: 100vh;
+  max-width: 100%;
 }
 
 .map-overlay {
@@ -29,4 +31,5 @@
   width: 100vw;
   height: 100vh;
   background-color: var(--map-overlay-color);
+  max-width: 100%;
 }
