--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,7 +20,8 @@ html {
 
 body {
   min-height: 100vh;
-  min-width: 100vw;
+  width: 100vw;
+  max-width: 100%;
   background-color: var(--bg-color);
   color: var(--font-color);
   box-sizing: border-box;
@@ -28,7 +29,7 @@ body {
 }
 
 header {
-  min-width: 100vw;
+  width: 100vw;
   border-bottom: solid 1px var(--font-color);
   z-index: 1000;
   position: relative;
@@ -39,6 +40,7 @@ header {
   background-color: var(--header-color);
   box-sizing: border-box;
   height: 50px;
+  max-width: 100%;
 }
 
 section {
@@ -56,6 +58,7 @@ section:first-of-type {
 
 .inner-header {
   width: clamp(200px, 100vw, 1024px);
+  max-width: 100%;
 }
 
 main {
@@ -64,10 +67,12 @@ main {
   justify-content: center;
   position: relative;
   z-index: 1000;
+  max-width: 100%;
 }
 
 .inner-main {
   width: clamp(200px, 100vw, 1024px);
+  max-width: 100%;
 }
 
 .hero {
@@ -138,7 +143,7 @@ main {
 .nav-down,
 .nav-up {
   display: flex;
-  width: 100;
+  width: 100%;
   justify-content: center;
 }
 
